style.css
body {
      background-color: #0f0f1a;
}

header {
      text-align:center;
      font-size:18px;
      background-color: #1e1e3b;
      color:#0f0f1a;
      text-decoration:none;
      padding-bottom:20px;
      padding-top:20px;
}

header a {
      color: #ffffff;          
      text-decoration: none;    
      margin: 0 15px;           
      font-weight: bold;         
      transition: color 0.3s, opacity 0.2s, background-color 0.2s;
      font-family:Arial, Helvetica, sans-serif;
      padding:12px 16px;
      border-radius:6px;
}

header a:hover {
      opacity:0.95;
      background-color:#313158;
}

h1 {
      color:rgb(234, 225, 225);
      text-align:center;
      font-family: Arial Black, Arial, sans-serif;
}

.h1 {
      margin-top:40px;
}

p {
      color:rgb(234,225,225);
      text-align:center;
      font-family: Arial, Helvetica, sans-serif;
      font-size:20px;
}

.home {
      margin-bottom : 160px;
      margin-top : 40px;
}

.about {
      max-width:1100px;
      margin : 0 auto;
      margin-bottom:160px;
      margin-top : 40px;
}

.contact {
      margin-top : 40px;
}

.contactIMG {
      text-align:center;
      margin-top:40px;
}

.github {
background-color: rgb(33,37,41);
color:white;
border:none;
border-radius:40px;
padding:6px 12px;
cursor:pointer;
transition:opacity 0.2s,transform 0.2s;  
font-size:20px;         
}

.github:hover {
opacity:0.6;
transform: scale(1.1);
}

.github:active {
opacity:0.4;
transform:scale(1.0);
}

html {
  scroll-behavior: smooth;
}

